# volatility-trading

./: .gitignore  main.tex  pyproject.toml  references.bib  requirements.txt
.streamlit/: config.toml
config/: settings.yaml  strategy_params.yaml
dashboard/: app.py
dashboard/pages/: 1_Strategy_Comparison.py  2_IV_Analysis.py  3_Run_Backtest.py
data/processed/: equity_skew_arb.parquet  equity_straddle.parquet  equity_strangle_ss0.parquet  equity_strangle_ss10.parquet  equity_strangle_ss5.parquet  market_daily.parquet  market_hourly.parquet
data/raw/: daily_raw.parquet  hourly_raw.parquet
docs/paper/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc
scripts/: fetch_data.py  run_all.py
src/data/: loader.py  preprocessor.py  universe.py
src/engine/: backtester.py  clock.py  events.py
src/ml/: classifier.py  features.py  labeler.py
src/options/: iv_surface.py  position.py  pricing.py
src/portfolio/: hedge.py  portfolio.py  risk.py
src/reporting/: metrics.py  plots.py
src/strategies/: base.py  skew_arb.py  straddle.py  strangle.py  strangle_ml.py
