[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "volatility-trading"
version = "0.1.0"
description = "Volatility trading strategy replication using SPY/SPX options"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2",
    "pandas-datareader>=0.10",
    "py-vollib-vectorized>=0.1",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "plotly>=5.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "tqdm>=4.0",
    "streamlit>=1.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ipykernel", "notebook"]
